# algorithms_realization

./: README.md
src/8queens_problem_IDS_RBFS/: CMakeLists.txt  board.cpp  board.h  main.cpp  my_unit_test.h  queen.cpp  queen.h  unit_testing.cpp  unit_testing.h
src/btree/: CMakeLists.txt  b_tree.cpp  b_tree.h  b_tree_node.cpp  b_tree_node.h  main.cpp  my_unit_test.cpp  my_unit_test.h  unit_testing.cpp  unit_testing.h
src/optimized_external_sort/: CMakeLists.txt  external_sort.cpp  external_sort.h  file_functions.cpp  file_functions.h  internal_sort.cpp  internal_sort.h  main.cpp  merge_sort.cpp  merge_sort.h  my_unit_test.h  unit_testing_sorting.cpp  unit_testing_sorting.h
src/travel_ants (swarm intelligance)/: CMakeLists.txt  aco.cpp  aco.h  ant.cpp  ant.h  ant_graph.cpp  ant_graph.h  main.cpp  my_unit_test.cpp  my_unit_test.h  unit_testing.cpp  unit_testing.h  wild_ant.cpp  wild_ant.h
